--- a/UI_normal.css
+++ b/UI_normal.css
@@ -19,6 +19,23 @@ GW2TacO
 	opacity:1.0f;
 }
 
+#compass
+{
+	width:100%;
+	height:100%;
+	background:#ff0000;
+	opacity:1.0f;
+	font:menomonia_small;
+}
+
+#ranges
+{
+	width:100%;
+	height:100%;
+	background:#ff0000;
+	opacity:1.0f;
+}
+
 #locationaltimer
 {
 	width:100%;
