--- a/UI_normal.css
+++ b/UI_normal.css
@@ -17,6 +17,7 @@ GW2TacO
 	height:100%;
 	background:#ff0000;
 	opacity:1.0f;
+	font:menomonia_small;
 }
 
 #compass
@@ -232,4 +233,12 @@ markereditor button
 	width:170px;
 	height:22px;
         padding-bottom:4px;
+}
+
+#hpgrid
+{
+	width:255px;
+	height:14px;
+	left:50%-179px;
+	top:86px;
 }
