Thursday, 13 October 2016 Cumulative update #2 Hi!
Now that I'm putting more time into TacO again, some people contacted me about various issues they were having, and helped me look into them.

There was an issue with keyboard handling, and alt-tabbing causing weird issues on Windows 7 with an extra, old style task selector popping up. This has been fixed. As a side effect, if you have a keyboard layout that requires pressing the alt or atgr keys to write accented letters, I _think_ that could be fixed as well, but please let me know.

Another issue was that TacO kept freezing for some people randomly, some more consistently than others. Turns out Windows decided to kill the DirectX device from under TacO in these instances. The device should be correctly recovered in this build and make TacO a lot more stable for people who had this issue.

I also added some requested features:
The mouse highlight now has selectable color (based on the original CGA palette of 16 colors), and a black outline you can turn on and off.

A notepad has also been added. In order to make this minimally intrusive, in order to edit it you need to bind a key to the edit action (set to ']' by default). While editing, you can click into the notepad, select, copy and paste stuff, undo-redo also works. Once you stop editing (by clicking outside the textbox), the window will become transparent to mouse clicks and you'll need to activate edit mode again to change the text. The text will persist between runs of TacO and is saved into a text file in the TacO directory. As with any other window in the overlay, it will at first open in the middle of the screen, and you need to go into window edit mode in the menu to move and resize it.

最後，但並非最不重要的是，我有一個很好的提交從Xanadias一個據說接近最佳的路線通過地板是熔岩冒險。我添加了一個新功能到跟踪系統用於公會獎金（一個重置位置現在可以輸入），並使用該系統，所以總是只有一個標記，以顯示你下一個去。他還給我一些其他相當真棒的好東西，但我仍然需要驗證那些。

You can download the new build here.

Change notes:

    Alt-tabbing should work properly now
    Keyboard handling should be 

--- a/UI_larger.css
+++ b/UI_larger.css
@@ -250,3 +250,31 @@ markereditor button
 	left:50%-219px;
 	top:106px;
 }
+
+#notepadbox
+{
+	margin:0px;
+}
+
+notepad
+{
+	margin:0px;
+}
+
+notepad textbox
+{
+	background:rgba(0,0,0,0.7);
+	margin:1px;
+	padding:1px;
+	border:1px;
+}
+
+notepad textbox:selection:active
+{
+	background:rgba(64,64,64,1);
+}
+
+notepad textbox:selection:hover
+{
+	background:rgba(192,192,192,1);
+}
