--- a/UI_large.css
+++ b/UI_large.css
@@ -1,6 +1,6 @@
 *
 {
-	font:menomnia_text_large;
+	font:trebuchet_large;
 }
 
 GW2TacO 
@@ -12,6 +12,15 @@ GW2TacO
 }
 
 #tactical
+{
+	width:100%;
+	height:100%;
+	background:#ff0000;
+	opacity:1.0f;
+	font:menomonia_large;
+}
+
+#trail
 {
 	width:100%;
 	height:100%;
@@ -87,25 +96,45 @@ maptimer
 
 #MenuButton
 {
-	width:30px;
-	height:30px;
-	left:324px;
-	top:1px;
+	width:35px;
+	height:35px;
+	left:320px;
+	top:0px;
 	opacity:0.5;
 	background-color:none;
-	background: skin(MenuIcon) center middle;
+	background: skin(taco_large_dark) top left;
 }
 
 #MenuButton:hover
 {
-	background: skin(MenuIconHover) center middle;
+	background: skin(taco_large_light) top left;
 	opacity:1.0;
 }
 
 #MenuButton:active
 {
-	background: skin(MenuIconPush) center middle;
+	background: skin(taco_large_light) top left;
 	opacity:1.0;
+}
+
+#RedCircle
+{
+	width:38px;
+	height:38px;
+	left:185px;
+	top:8px;
+	opacity:1.0;
+	background-color:none;
+	background: skin(shine) top left;
+}
+
+#TPButton
+{
+	width:36px;
+	height:35px;
+	left:178px;
+	top:0px;
+	background-color:none;
 }
 
 window
@@ -277,4 +306,28 @@ notepad textbox:selection:active
 notepad textbox:selection:hover
 {
 	background:rgba(192,192,192,1);
+}
+
+#APIkeyInput
+{
+	background:rgba(0,0,0,0.7);
+	padding:1px;
+	border:1px;
+	width:565px;
+	height:21px;
+	top:50%+20px;
+}
+
+#MenuHoverBox
+{
+	left:0px;
+	top:0px;
+	width:355px;
+	height:35px;
+	background-color:none;
+}
+
+#startnewsection
+{
+	visibility:hidden;
 }
